Closed Bug 1630007 Opened 5 years ago Closed 5 years ago

WebXR ReferenceSpace orientation not correctly applied

Categories

(Core :: WebVR, defect)

All
Unspecified
defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: mortimergoro, Assigned: mortimergoro)

Details

Attachments

(1 file)

STR:

Assignee: nobody → imanol
Attachment #9140539 - Attachment description: Bug 1630007 - Use matrix composition to calculate XRSpace effective origin transforms. → Bug 1630007 - Apply XRSpace effective origin position and orientation using matrix multiplication.
Pushed by igorostizaga@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/39c2345d2994 Apply XRSpace effective origin position and orientation using matrix multiplication. r=kip,daoshengmu
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: