Bug 1630007  - Apply XRSpace effective origin position and orientation using matrix multiplication. r=kip,daoshengmu

Differential Revision: https://phabricator.services.mozilla.com/D70923